# pi-home-info

./: LICENSE  README.md
console-app/: Cargo.toml  build.rs  tibber.graphql
console-app/src/: main.rs  tibber.rs  verisure.rs
dioxus-test/: Dioxus.toml  tailwind.config.js  test.html
dioxus-test/public/: style.css  tailwind.css
dioxus-test/src/: main.rs
graphql/: tibber_schema.json
tibber-test/: Cargo.toml  README.md
tibber-test/src/: main.rs
verisure-test/: Cargo.toml  README.md
verisure-test/src/: main.rs
