[package]
name = "console-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21"
chrono = "0.4.31"
cynic = { version = "3", features = ["http-surf"] }
http = "0.2"
inline_colorization = "0.1.5"
mime = "0.3"
reqwest = { version = "0.11", features = ["json", "cookies"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
surf = "2"
tokio = { version = "1.33", features = ["full"] }


[build-dependencies]
cynic-codegen = { version = "3" }

[dev-dependencies]
insta = "1"