[package]
name = "tibber-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cynic = { version = "3", features = ["http-surf"] }
surf = "2"
tokio = { version = "1.30.0", features = ["full"] }

[build-dependencies]
cynic-codegen = { version = "3" }

[dev-dependencies]
insta = "1"